# claims-service

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 499eaba7b8ef_add_unique_constraint_on_external_claim_.py  738f23d3eb94_initial_migration_with_claims_table.py
postman/: claim_process_collection.json
src/claim_process/: __init__.py  config.py  count_min_sketch.py  csv_converter.py  database.py  main.py  models.py  seed_data.py  utils.py
src/claim_process/repositories/: claim_repository.py
src/claim_process/services/: calculator.py  claim_processor.py  field_mapper.py  validator.py
tests/: __init__.py  test_api.py  test_count_min_sketch.py  test_services.py
